--- a/css/contact.css
+++ b/css/contact.css
@@ -10,6 +10,15 @@ body {
     text-align: center;
 }
 
+.header {
+    position: fixed;
+    top: 0;
+    right: 0;
+    background-color: #f1f1f1;
+    padding: 10px;
+    z-index: 1000;
+}
+
 form {
     max-width: 400px;
     margin: 0 auto;
