--- a/css/gallery.css
+++ b/css/gallery.css
@@ -8,6 +8,15 @@ body {
     margin: 0;
 }
 
+.header {
+    position: fixed;
+    top: 0;
+    right: 0;
+    background-color: #f1f1f1;
+    padding: 10px;
+    z-index: 1000;
+}
+
 .gallery {
     display: flex;
     flex-direction: column;
